--- a/colorlinz.html
+++ b/colorlinz.html
@@ -114,7 +114,7 @@ Simplify Everything            </a>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'cgwxyz'; // required: replace example with your forum shortname
+            var disqus_shortname = 'simplifyeverything'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'colorlinz';
                 var disqus_url = '/colorlinz.html';
@@ -206,7 +206,7 @@ Simplify Everything            </a>
     <!-- Disqus -->
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'cgwxyz'; // required: replace example with your forum shortname
+        var disqus_shortname = 'simplifyeverything'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function () {
