--- a/tags.html
+++ b/tags.html
@@ -135,7 +135,7 @@ Simplify Everything            </a>
     <!-- Disqus -->
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'cgwxyz'; // required: replace example with your forum shortname
+        var disqus_shortname = 'simplifyeverything'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function () {
